front-end/Syntax-Tree/src/structfe.output
Nonterminals useless in grammar

   direct_declarator_function_pointer
   declaration_list


Terminals unused in grammar

   TYPE_NAME


Rules useless in grammar

  141 direct_declarator_function_pointer: pointer IDENTIFIER

  142 declaration_list: declaration
  143                 | declaration_list declaration


State 22 conflicts: 1 shift/reduce
State 80 conflicts: 21 reduce/reduce
State 101 conflicts: 1 shift/reduce
State 143 conflicts: 2 reduce/reduce
State 223 conflicts: 1 shift/reduce


Grammar

    0 $accept: _start $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '(' ')'
    7                   | postfix_expression '(' argument_expression_list ')'
    8                   | postfix_expression PTR_OP IDENTIFIER

    9 argument_expression_list: assignment_expression
   10                         | argument_expression_list ',' assignment_expression

   11 unary_expression: postfix_expression
   12                 | unary_operator cast_expression
   13                 | SIZEOF '(' unary_expression ')'
   14                 | SIZEOF '(' type_name ')'

   15 unary_operator: '&'
   16               | pointer
   17               | '+'
   18               | '-'

   19 cast_expression: unary_expression
   20                | '(' type_name ')' cast_expression

   21 multiplicative_expression: cast_expression
   22                          | multiplicative_expression '*' cast_expression
   23                          | multiplicative_expression '/' cast_expression

   24 additive_expression: multiplicative_expression
   25                    | additive_expression '+' multiplicative_expression
   26                    | additive_expression '-' multiplicative_expression

   27 relational_expression: additive_expression
   28                      | relational_expression L_OP additive_expression
   29                      | relational_expression G_OP additive_expression
   30                      | relational_expression LE_OP additive_expression
   31                      | relational_expression GE_OP additive_expression

   32 equality_expression: relational_expression
   33                    | equality_expression EQ_OP relational_expression
   34                    | equality_expression NE_OP relational_expression

   35 logical_and_expression: equality_expression
   36                       | logical_and_expression AND_OP equality_expression

   37 logical_or_expression: logical_and_expression
   38                      | logical_or_expression OR_OP logical_and_expression

   39 assignment_expression: logical_or_expression
   40                      | unary_expression assignment_operator assignment_expression

   41 if_expression: logical_or_expression

   42 assignment_operator: '='
   43                    | MUL_ASSIGN
   44                    | DIV_ASSIGN
   45                    | ADD_ASSIGN
   46                    | SUB_ASSIGN

   47 expression: assignment_expression
   48           | expression ',' assignment_expression

   49 declaration: declaration_specifiers init_declarator_list ';'
   50            | declaration_specifiers ';'

   51 declaration_specifiers: EXTERN type_specifier
   52                       | type_specifier

   53 init_declarator_list: init_declarator
   54                     | init_declarator_list ',' init_declarator

   55 init_declarator: declarator
   56                | declarator '=' initializer

   57 type_specifier: VOID
   58               | INT
   59               | struct_or_union_specifier

   60 struct_or_union_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
   61                          | STRUCT '{' struct_declaration_list '}'
   62                          | STRUCT IDENTIFIER

   63 struct_declaration_list: struct_declaration
   64                        | struct_declaration_list struct_declaration

   65 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   66 specifier_qualifier_list: type_specifier specifier_qualifier_list
   67                         | type_specifier

   68 struct_declarator_list: struct_declarator
   69                       | struct_declarator_list ',' struct_declarator

   70 struct_declarator: declarator

   71 declarator: pointer_direct_declarator
   72           | direct_declarator

   73 pointer_direct_declarator: pointer direct_declarator_pointer
   74                          | pointer

   75 direct_declarator: IDENTIFIER
   76                  | '(' declarator ')'
   77                  | direct_declarator '(' parameter_list ')'
   78                  | direct_declarator '(' identifier_list ')'
   79                  | direct_declarator '(' ')'

   80 direct_declarator_pointer: IDENTIFIER
   81                          | '(' declarator ')'
   82                          | '(' pointer_direct_declarator ')' '(' parameter_list ')'
   83                          | '(' pointer_direct_declarator ')' '(' ')'
   84                          | direct_declarator_pointer '(' parameter_list ')'
   85                          | direct_declarator_pointer '(' identifier_list ')'
   86                          | direct_declarator_pointer '(' ')'

   87 pointer: '*'

   88 parameter_list: parameter_declaration
   89               | parameter_list ',' parameter_declaration

   90 parameter_declaration: declaration_specifiers declarator
   91                      | declaration_specifiers abstract_declarator
   92                      | declaration_specifiers

   93 identifier_list: IDENTIFIER
   94                | identifier_list ',' IDENTIFIER

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 abstract_declarator: abstract_declarator_with_pointer
   98                    | direct_abstract_declarator

   99 abstract_declarator_with_pointer: pointer
  100                                 | pointer direct_abstract_declarator_pointer_free

  101 direct_abstract_declarator: '(' abstract_declarator ')'
  102                           | '(' ')'
  103                           | '(' parameter_list ')'
  104                           | direct_abstract_declarator '(' ')'
  105                           | direct_abstract_declarator '(' parameter_list ')'

  106 direct_abstract_declarator_pointer_free: '(' direct_abstract_declarator_pointer_free ')'
  107                                        | '(' ')'
  108                                        | '(' parameter_list ')'
  109                                        | direct_abstract_declarator_pointer_free '(' ')'
  110                                        | direct_abstract_declarator_pointer_free '(' parameter_list ')'

  111 initializer: assignment_expression

  112 statement: compound_statement
  113          | expression_statement
  114          | selection_statement
  115          | iteration_statement
  116          | jump_statement

  117 compound_statement: '{' '}'
  118                   | '{' block_item_list '}'
  119                   | ';'

  120 block_item_list: block_item
  121                | block_item_list block_item

  122 block_item: declaration
  123           | statement

  124 expression_statement: ';'
  125                     | expression ';'

  126 selection_statement: IF '(' if_expression ')' statement
  127                    | IF '(' if_expression ')' statement ELSE statement

  128 iteration_statement: WHILE '(' expression ')' statement
  129                    | FOR '(' expression_statement expression_statement ')' statement
  130                    | FOR '(' expression_statement expression_statement expression ')' statement
  131                    | FOR '(' declaration expression_statement ')' statement
  132                    | FOR '(' declaration expression_statement expression ')' statement

  133 jump_statement: RETURN expression ';'
  134               | RETURN ';'

  135 program: external_declaration
  136        | program external_declaration

  137 _start: program

  138 external_declaration: function_definition
  139                     | declaration

  140 function_definition: declaration_specifiers declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'&' (38) 15
'(' (40) 4 6 7 13 14 20 76 77 78 79 81 82 83 84 85 86 101 102 103 104
    105 106 107 108 109 110 126 127 128 129 130 131 132
')' (41) 4 6 7 13 14 20 76 77 78 79 81 82 83 84 85 86 101 102 103 104
    105 106 107 108 109 110 126 127 128 129 130 131 132
'*' (42) 22 87
'+' (43) 17 25
',' (44) 10 48 54 69 89 94
'-' (45) 18 26
'/' (47) 23
';' (59) 49 50 65 119 124 125 133 134
'=' (61) 42 56
'{' (123) 60 61 117 118
'}' (125) 60 61 117 118
error (256)
IDENTIFIER (258) 1 8 60 62 75 80 93 94
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 13 14
PTR_OP (262) 8
LE_OP (263) 30
GE_OP (264) 31
EQ_OP (265) 33
NE_OP (266) 34
L_OP (267) 28
G_OP (268) 29
AND_OP (269) 36
OR_OP (270) 38
MUL_ASSIGN (271) 43
DIV_ASSIGN (272) 44
ADD_ASSIGN (273) 45
SUB_ASSIGN (274) 46
TYPE_NAME (275)
EXTERN (276) 51
INT (277) 58
VOID (278) 57
STRUCT (279) 60 61 62
IF (280) 126 127
ELSE (281) 127
WHILE (282) 128
FOR (283) 129 130 131 132
RETURN (284) 133 134


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
primary_expression (43)
    on left: 1 2 3 4, on right: 5
postfix_expression (44)
    on left: 5 6 7 8, on right: 6 7 8 11
argument_expression_list (45)
    on left: 9 10, on right: 7 10
unary_expression (46)
    on left: 11 12 13 14, on right: 13 19 40
unary_operator (47)
    on left: 15 16 17 18, on right: 12
cast_expression (48)
    on left: 19 20, on right: 12 20 21 22 23
multiplicative_expression (49)
    on left: 21 22 23, on right: 22 23 24 25 26
additive_expression (50)
    on left: 24 25 26, on right: 25 26 27 28 29 30 31
relational_expression (51)
    on left: 27 28 29 30 31, on right: 28 29 30 31 32 33 34
equality_expression (52)
    on left: 32 33 34, on right: 33 34 35 36
logical_and_expression (53)
    on left: 35 36, on right: 36 37 38
logical_or_expression (54)
    on left: 37 38, on right: 38 39 41
assignment_expression (55)
    on left: 39 40, on right: 9 10 40 47 48 111
if_expression (56)
    on left: 41, on right: 126 127
assignment_operator (57)
    on left: 42 43 44 45 46, on right: 40
expression (58)
    on left: 47 48, on right: 4 48 125 128 130 132 133
declaration (59)
    on left: 49 50, on right: 122 131 132 139
declaration_specifiers (60)
    on left: 51 52, on right: 49 50 90 91 92 140
init_declarator_list (61)
    on left: 53 54, on right: 49 54
init_declarator (62)
    on left: 55 56, on right: 53 54
type_specifier (63)
    on left: 57 58 59, on right: 51 52 66 67
struct_or_union_specifier (64)
    on left: 60 61 62, on right: 59
struct_declaration_list (65)
    on left: 63 64, on right: 60 61 64
struct_declaration (66)
    on left: 65, on right: 63 64
specifier_qualifier_list (67)
    on left: 66 67, on right: 65 66 95 96
struct_declarator_list (68)
    on left: 68 69, on right: 65 69
struct_declarator (69)
    on left: 70, on right: 68 69
declarator (70)
    on left: 71 72, on right: 55 56 70 76 81 90 140
pointer_direct_declarator (71)
    on left: 73 74, on right: 71 82 83
direct_declarator (72)
    on left: 75 76 77 78 79, on right: 72 77 78 79
direct_declarator_pointer (73)
    on left: 80 81 82 83 84 85 86, on right: 73 84 85 86
pointer (74)
    on left: 87, on right: 16 73 74 99 100
parameter_list (75)
    on left: 88 89, on right: 77 82 84 89 103 105 108 110
parameter_declaration (76)
    on left: 90 91 92, on right: 88 89
identifier_list (77)
    on left: 93 94, on right: 78 85 94
type_name (78)
    on left: 95 96, on right: 14 20
abstract_declarator (79)
    on left: 97 98, on right: 91 96 101
abstract_declarator_with_pointer (80)
    on left: 99 100, on right: 97
direct_abstract_declarator (81)
    on left: 101 102 103 104 105, on right: 98 104 105
direct_abstract_declarator_pointer_free (82)
    on left: 106 107 108 109 110, on right: 100 106 109 110
initializer (83)
    on left: 111, on right: 56
statement (84)
    on left: 112 113 114 115 116, on right: 123 126 127 128 129 130
    131 132
compound_statement (85)
    on left: 117 118 119, on right: 112 140
block_item_list (86)
    on left: 120 121, on right: 118 121
block_item (87)
    on left: 122 123, on right: 120 121
expression_statement (88)
    on left: 124 125, on right: 113 129 130 131 132
selection_statement (89)
    on left: 126 127, on right: 114
iteration_statement (90)
    on left: 128 129 130 131 132, on right: 115
jump_statement (91)
    on left: 133 134, on right: 116
program (92)
    on left: 135 136, on right: 136 137
_start (93)
    on left: 137, on right: 0
external_declaration (94)
    on left: 138 139, on right: 135 136
function_definition (95)
    on left: 140, on right: 138


State 0

    0 $accept: . _start $end

    EXTERN  shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    declaration                go to state 5
    declaration_specifiers     go to state 6
    type_specifier             go to state 7
    struct_or_union_specifier  go to state 8
    program                    go to state 9
    _start                     go to state 10
    external_declaration       go to state 11
    function_definition        go to state 12


State 1

   51 declaration_specifiers: EXTERN . type_specifier

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    type_specifier             go to state 13
    struct_or_union_specifier  go to state 8


State 2

   58 type_specifier: INT .

    $default  reduce using rule 58 (type_specifier)


State 3

   57 type_specifier: VOID .

    $default  reduce using rule 57 (type_specifier)


State 4

   60 struct_or_union_specifier: STRUCT . IDENTIFIER '{' struct_declaration_list '}'
   61                          | STRUCT . '{' struct_declaration_list '}'
   62                          | STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 14
    '{'         shift, and go to state 15


State 5

  139 external_declaration: declaration .

    $default  reduce using rule 139 (external_declaration)


State 6

   49 declaration: declaration_specifiers . init_declarator_list ';'
   50            | declaration_specifiers . ';'
  140 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 16
    '('         shift, and go to state 17
    '*'         shift, and go to state 18
    ';'         shift, and go to state 19

    init_declarator_list       go to state 20
    init_declarator            go to state 21
    declarator                 go to state 22
    pointer_direct_declarator  go to state 23
    direct_declarator          go to state 24
    pointer                    go to state 25


State 7

   52 declaration_specifiers: type_specifier .

    $default  reduce using rule 52 (declaration_specifiers)


State 8

   59 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 59 (type_specifier)


State 9

  136 program: program . external_declaration
  137 _start: program .

    EXTERN  shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    $default  reduce using rule 137 (_start)

    declaration                go to state 5
    declaration_specifiers     go to state 6
    type_specifier             go to state 7
    struct_or_union_specifier  go to state 8
    external_declaration       go to state 26
    function_definition        go to state 12


State 10

    0 $accept: _start . $end

    $end  shift, and go to state 27


State 11

  135 program: external_declaration .

    $default  reduce using rule 135 (program)


State 12

  138 external_declaration: function_definition .

    $default  reduce using rule 138 (external_declaration)


State 13

   51 declaration_specifiers: EXTERN type_specifier .

    $default  reduce using rule 51 (declaration_specifiers)


State 14

   60 struct_or_union_specifier: STRUCT IDENTIFIER . '{' struct_declaration_list '}'
   62                          | STRUCT IDENTIFIER .

    '{'  shift, and go to state 28

    $default  reduce using rule 62 (struct_or_union_specifier)


State 15

   61 struct_or_union_specifier: STRUCT '{' . struct_declaration_list '}'

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    struct_declaration_list    go to state 30
    struct_declaration         go to state 31
    specifier_qualifier_list   go to state 32


State 16

   75 direct_declarator: IDENTIFIER .

    $default  reduce using rule 75 (direct_declarator)


State 17

   76 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 16
    '('         shift, and go to state 17
    '*'         shift, and go to state 18

    declarator                 go to state 33
    pointer_direct_declarator  go to state 23
    direct_declarator          go to state 24
    pointer                    go to state 25


State 18

   87 pointer: '*' .

    $default  reduce using rule 87 (pointer)


State 19

   50 declaration: declaration_specifiers ';' .

    $default  reduce using rule 50 (declaration)


State 20

   49 declaration: declaration_specifiers init_declarator_list . ';'
   54 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 34
    ';'  shift, and go to state 35


State 21

   53 init_declarator_list: init_declarator .

    $default  reduce using rule 53 (init_declarator_list)


State 22

   55 init_declarator: declarator .
   56                | declarator . '=' initializer
  140 function_definition: declaration_specifiers declarator . compound_statement

    '='  shift, and go to state 36
    ';'  shift, and go to state 37
    '{'  shift, and go to state 38

    ';'       [reduce using rule 55 (init_declarator)]
    $default  reduce using rule 55 (init_declarator)

    compound_statement  go to state 39


State 23

   71 declarator: pointer_direct_declarator .

    $default  reduce using rule 71 (declarator)


State 24

   72 declarator: direct_declarator .
   77 direct_declarator: direct_declarator . '(' parameter_list ')'
   78                  | direct_declarator . '(' identifier_list ')'
   79                  | direct_declarator . '(' ')'

    '('  shift, and go to state 40

    $default  reduce using rule 72 (declarator)


State 25

   73 pointer_direct_declarator: pointer . direct_declarator_pointer
   74                          | pointer .

    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42

    $default  reduce using rule 74 (pointer_direct_declarator)

    direct_declarator_pointer  go to state 43


State 26

  136 program: program external_declaration .

    $default  reduce using rule 136 (program)


State 27

    0 $accept: _start $end .

    $default  accept


State 28

   60 struct_or_union_specifier: STRUCT IDENTIFIER '{' . struct_declaration_list '}'

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    struct_declaration_list    go to state 44
    struct_declaration         go to state 31
    specifier_qualifier_list   go to state 32


State 29

   66 specifier_qualifier_list: type_specifier . specifier_qualifier_list
   67                         | type_specifier .

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4

    $default  reduce using rule 67 (specifier_qualifier_list)

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    specifier_qualifier_list   go to state 45


State 30

   61 struct_or_union_specifier: STRUCT '{' struct_declaration_list . '}'
   64 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4
    '}'     shift, and go to state 46

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    struct_declaration         go to state 47
    specifier_qualifier_list   go to state 32


State 31

   63 struct_declaration_list: struct_declaration .

    $default  reduce using rule 63 (struct_declaration_list)


State 32

   65 struct_declaration: specifier_qualifier_list . struct_declarator_list ';'

    IDENTIFIER  shift, and go to state 16
    '('         shift, and go to state 17
    '*'         shift, and go to state 18

    struct_declarator_list     go to state 48
    struct_declarator          go to state 49
    declarator                 go to state 50
    pointer_direct_declarator  go to state 23
    direct_declarator          go to state 24
    pointer                    go to state 25


State 33

   76 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 51


State 34

   54 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 16
    '('         shift, and go to state 17
    '*'         shift, and go to state 18

    init_declarator            go to state 52
    declarator                 go to state 53
    pointer_direct_declarator  go to state 23
    direct_declarator          go to state 24
    pointer                    go to state 25


State 35

   49 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 49 (declaration)


State 36

   56 init_declarator: declarator '=' . initializer

    IDENTIFIER      shift, and go to state 54
    CONSTANT        shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56
    SIZEOF          shift, and go to state 57
    '('             shift, and go to state 58
    '&'             shift, and go to state 59
    '+'             shift, and go to state 60
    '-'             shift, and go to state 61
    '*'             shift, and go to state 18

    primary_expression         go to state 62
    postfix_expression         go to state 63
    unary_expression           go to state 64
    unary_operator             go to state 65
    cast_expression            go to state 66
    multiplicative_expression  go to state 67
    additive_expression        go to state 68
    relational_expression      go to state 69
    equality_expression        go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    assignment_expression      go to state 73
    pointer                    go to state 74
    initializer                go to state 75


State 37

  119 compound_statement: ';' .

    $default  reduce using rule 119 (compound_statement)


State 38

  117 compound_statement: '{' . '}'
  118                   | '{' . block_item_list '}'

    IDENTIFIER      shift, and go to state 54
    CONSTANT        shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56
    SIZEOF          shift, and go to state 57
    EXTERN          shift, and go to state 1
    INT             shift, and go to state 2
    VOID            shift, and go to state 3
    STRUCT          shift, and go to state 4
    IF              shift, and go to state 76
    WHILE           shift, and go to state 77
    FOR             shift, and go to state 78
    RETURN          shift, and go to state 79
    '('             shift, and go to state 58
    '&'             shift, and go to state 59
    '+'             shift, and go to state 60
    '-'             shift, and go to state 61
    '*'             shift, and go to state 18
    ';'             shift, and go to state 80
    '{'             shift, and go to state 38
    '}'             shift, and go to state 81

    primary_expression         go to state 62
    postfix_expression         go to state 63
    unary_expression           go to state 64
    unary_operator             go to state 65
    cast_expression            go to state 66
    multiplicative_expression  go to state 67
    additive_expression        go to state 68
    relational_expression      go to state 69
    equality_expression        go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    assignment_expression      go to state 82
    expression                 go to state 83
    declaration                go to state 84
    declaration_specifiers     go to state 85
    type_specifier             go to state 7
    struct_or_union_specifier  go to state 8
    pointer                    go to state 74
    statement                  go to state 86
    compound_statement         go to state 87
    block_item_list            go to state 88
    block_item                 go to state 89
    expression_statement       go to state 90
    selection_statement        go to state 91
    iteration_statement        go to state 92
    jump_statement             go to state 93


State 39

  140 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 140 (function_definition)


State 40

   77 direct_declarator: direct_declarator '(' . parameter_list ')'
   78                  | direct_declarator '(' . identifier_list ')'
   79                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 94
    EXTERN      shift, and go to state 1
    INT         shift, and go to state 2
    VOID        shift, and go to state 3
    STRUCT      shift, and go to state 4
    ')'         shift, and go to state 95

    declaration_specifiers     go to state 96
    type_specifier             go to state 7
    struct_or_union_specifier  go to state 8
    parameter_list             go to state 97
    parameter_declaration      go to state 98
    identifier_list            go to state 99


State 41

   80 direct_declarator_pointer: IDENTIFIER .

    $default  reduce using rule 80 (direct_declarator_pointer)


State 42

   81 direct_declarator_pointer: '(' . declarator ')'
   82                          | '(' . pointer_direct_declarator ')' '(' parameter_list ')'
   83                          | '(' . pointer_direct_declarator ')' '(' ')'

    IDENTIFIER  shift, and go to state 16
    '('         shift, and go to state 17
    '*'         shift, and go to state 18

    declarator                 go to state 100
    pointer_direct_declarator  go to state 101
    direct_declarator          go to state 24
    pointer                    go to state 25


State 43

   73 pointer_direct_declarator: pointer direct_declarator_pointer .
   84 direct_declarator_pointer: direct_declarator_pointer . '(' parameter_list ')'
   85                          | direct_declarator_pointer . '(' identifier_list ')'
   86                          | direct_declarator_pointer . '(' ')'

    '('  shift, and go to state 102

    $default  reduce using rule 73 (pointer_direct_declarator)


State 44

   60 struct_or_union_specifier: STRUCT IDENTIFIER '{' struct_declaration_list . '}'
   64 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    STRUCT  shift, and go to state 4
    '}'     shift, and go to state 103

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    struct_declaration         go to state 47
    specifier_qualifier_list   go to state 32


State 45

   66 specifier_qualifier_list: type_specifier specifier_qualifier_list .

    $default  reduce using rule 66 (specifier_qualifier_list)


State 46

   61 struct_or_union_specifier: STRUCT '{' struct_declaration_list '}' .

    $default  reduce using rule 61 (struct_or_union_specifier)


State 47

   64 struct_declaration_list: struct_declaration_list struct_declaration .

    $default  reduce using rule 64 (struct_declaration_list)


State 48

   65 struct_declaration: specifier_qualifier_list struct_declarator_list . ';'
   69 struct_declarator_list: struct_declarator_list . ',' struct_declarator

    ','  shift, and go to state 104
    ';'  shift, and go to state 105


State 49

   68 struct_declarator_list: struct_declarator .

    $default  reduce using rule 68 (struct_declarator_list)


State 50

   70 struct_declarator: declarator .

    $default  reduce using rule 70 (struct_declarator)


State 51

   76 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 76 (direct_declarator)


State 52

   54 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 54 (init_declarator_list)


State 53

   55 init_declarator: declarator .
   56                | declarator . '=' initializer

    '='  shift, and go to state 36

    $default  reduce using rule 55 (init_declarator)


State 54

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


State 55

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


State 56

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


State 57

   13 unary_expression: SIZEOF . '(' unary_expression ')'
   14                 | SIZEOF . '(' type_name ')'

    '('  shift, and go to state 106


State 58

    4 primary_expression: '(' . expression ')'
   20 cast_expression: '(' . type_name ')' cast_expression

    IDENTIFIER      shift, and go to state 54
    CONSTANT        shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56
    SIZEOF          shift, and go to state 57
    INT             shift, and go to state 2
    VOID            shift, and go to state 3
    STRUCT          shift, and go to state 4
    '('             shift, and go to state 58
    '&'             shift, and go to state 59
    '+'             shift, and go to state 60
    '-'             shift, and go to state 61
    '*'             shift, and go to state 18

    primary_expression         go to state 62
    postfix_expression         go to state 63
    unary_expression           go to state 64
    unary_operator             go to state 65
    cast_expression            go to state 66
    multiplicative_expression  go to state 67
    additive_expression        go to state 68
    relational_expression      go to state 69
    equality_expression        go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    assignment_expression      go to state 82
    expression                 go to state 107
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 8
    specifier_qualifier_list   go to state 108
    pointer                    go to state 74
    type_name                  go to state 109


State 59

   15 unary_operator: '&' .

    $default  reduce using rule 15 (unary_operator)


State 60

   17 unary_operator: '+' .

    $default  reduce using rule 17 (unary_operator)


State 61

   18 unary_operator: '-' .

    $default  reduce using rule 18 (unary_operator)


State 62

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


State 63

    6 postfix_expression: postfix_expression . '(' ')'
    7                   | postfix_expression . '(' argument_expression_list ')'
    8                   | postfix_expression . PTR_OP IDENTIFIER
   11 unary_expression: postfix_expression .

    PTR_OP  shift, and go to state 110
    '('     shift, and go to state 111

    $default  reduce using rule 11 (unary_expression)


State 64

   19 cast_expression: unary_expression .
   40 assignment_expression: unary_expression . assignment_operator assignment_expression

    MUL_ASSIGN  shift, and go to state 112
    DIV_ASSIGN  shift, and go to state 113
    ADD_ASSIGN  shift, and go to state 114
    SUB_ASSIGN  shift, and go to state 115
    '='         shift, and go to state 116

    $default  reduce using rule 19 (cast_expression)

    assignment_operator  go to state 117


State 65

   12 unary_expression: unary_operator . cast_expression

    IDENTIFIER      shift, and go to state 54
    CONSTANT        shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56
    SIZEOF          shift, and go to state 57
    '('             shift, and go to state 58
    '&'             shift, and go to state 59
    '+'             shift, and go to state 60
    '-'             shift, and go to state 61
    '*'             shift, and go to state 18

    primary_expression  go to state 62
    postfix_expression  go to state 63
    unary_expression    go to state 118
    unary_operator      go to state 65
    cast_expression     go to state 119
    pointer             go to state 74


State 66

   21 multiplicative_expression: cast_expression .

    $default  reduce using rule 21 (multiplicative_expression)


State 67

   22 multiplicative_expression: multiplicative_expression . '*' cast_expression
   23                          | multiplicative_expression . '/' cast_expression
   24 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 120
    '/'  shift, and go to state 121

    $default  reduce using rule 24 (additive_expression)


State 68

   25 additive_expression: additive_expression . '+' multiplicative_expression
   26                    | additive_expression . '-' multiplicative_expression
   27 relational_expression: additive_expression .

    '+'  shift, and go to state 122
    '-'  shift, and go to state 123

    $default  reduce using rule 27 (relational_expression)


State 69

   28 relational_expression: relational_expression . L_OP additive_expression
   29                      | relational_expression . G_OP additive_expression
   30                      | relational_expression . LE_OP additive_expression
   31                      | relational_expression . GE_OP additive_expression
   32 equality_expression: relational_expression .

    LE_OP  shift, and go to state 124
    GE_OP  shift, and go to state 125
    L_OP   shift, and go to state 126
    G_OP   shift, and go to state 127

    $default  reduce using rule 32 (equality_expression)


State 70

   33 equality_expression: equality_expression . EQ_OP relational_expression
   34                    | equality_expression . NE_OP relational_expression
   35 logical_and_expression: equality_expression .

    EQ_OP  shift, and go to state 128
    NE_OP  shift, and go to state 129

    $default  reduce using rule 35 (logical_and_expression)


State 71

   36 logical_and_expression: logical_and_expression . AND_OP equality_expression
   37 logical_or_expression: logical_and_expression .

    AND_OP  shift, and go to state 130

    $default  reduce using rule 37 (logical_or_expression)


State 72

   38 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   39 assignment_expression: logical_or_expression .

    OR_OP  shift, and go to state 131

    $default  reduce using rule 39 (assignment_expression)


State 73

  111 initializer: assignment_expression .

    $default  reduce using rule 111 (initializer)


State 74

   16 unary_operator: pointer .

    $default  reduce using rule 16 (unary_operator)


State 75

   56 init_declarator: declarator '=' initializer .

    $default  reduce using rule 56 (init_declarator)


State 76

  126 selection_statement: IF . '(' if_expression ')' statement
  127                    | IF . '(' if_expression ')' statement ELSE statement

    '('  shift, and go to state 132


State 77

  128 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 133


State 78

  129 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
  130                    | FOR . '(' expression_statement expression_statement expression ')' statement
  131                    | FOR . '(' declaration expression_statement ')' statement
  132                    | FOR . '(' declaration expression_statement expression ')' statement

    '('  shift, and go to state 134


State 79

  133 jump_statement: RETURN . expression ';'
  134               | RETURN . ';'

    IDENTIFIER      shift, and go to state 54
    CONSTANT        shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56
    SIZEOF          shift, and go to state 57
    '('             shift, and go to state 58
    '&'             shift, and go to state 59
    '+'             shift, and go to state 60
    '-'             shift, and go to state 61
    '*'             shift, and go to state 18
    ';'             shift, and go to state 135

    primary_expression         go to state 62
    postfix_expression         go to state 63
    unary_expression           go to state 64
    unary_operator             go to state 65
    cast_expression            go to state 66
    multiplicative_expression  go to state 67
    additive_expression        go to state 68
    relational_expression      go to state 69
    equality_expression        go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    assignment_expression      go to state 82
    expression                 go to state 136
    pointer                    go to state 74


State 80

  119 compound_statement: ';' .
  124 expression_statement: ';' .
